--- a/css/traversify.css
+++ b/css/traversify.css
@@ -38,6 +38,8 @@
 @media (min-width: 500px) {
     .banner {
     background-image: url("../img/boatImage.jpg");
+    background-attachment: fixed;
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     height: 700px;
@@ -119,6 +121,8 @@ article h4 {
 
 .mid-banner {
     background-image: url("../img/busImage.jpg");
+    background-attachment: fixed;
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     height: 700px;
