--- a/css/traversify.css
+++ b/css/traversify.css
@@ -1,5 +1,5 @@
 * {
-    font-family: "vollkorn", serif;
+    font-family: "dosis", sans-serif;
     box-sizing: border-box;
     color: #1B5E20;
     transition: all 300ms ease;
